--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,4 @@
+/*noinspection CssOverwrittenProperties,CssInvalidPropertyValue*/
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,11 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    min-height: '-moz-available';
+    min-height: '-webkit-fill-available';
+    min-height: 'fill-available';
+    background: #61dafb;
 }
 
 code {
