--- a/front/src/index.css
+++ b/front/src/index.css
@@ -10,7 +10,7 @@ body {
     min-height: '-moz-available';
     min-height: '-webkit-fill-available';
     min-height: 'fill-available';
-    background: #61dafb;
+    background: #151515;
 }
 
 code {
